@@ -1,5 +1,13 @@
 2014-08-28  Richard Sandiford  <rdsandiford@googlemail.com>
 
+	* emit-rtl.c: Include rtl-iter.h.
+	(find_auto_inc): Turn from being a for_each_rtx callback to being
+	a function that examines each subrtx itself.  Assume the first operand
+	to an RTX_AUTOINC is the automodified register.
+	(try_split): Update call accordingly.
+
+2014-08-28  Richard Sandiford  <rdsandiford@googlemail.com>
+
 	* dwarf2out.c (resolve_one_addr): Remove unused data parameter.
 	Return a bool, inverting the result so that 0/false means "not ok".
 	Use FOR_EACH_SUBRTX_PTR instead of for_each_rtx to iterate over
